--- a/MyLeasing.Web/Views/Shared/_Layout.cshtml
+++ b/MyLeasing.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,8 @@
                     @if (User.Identity.IsAuthenticated && User.IsInRole("Manager"))
                     {
                         <li><a asp-area="" asp-controller="Owners" asp-action="Index">Owners</a></li>
+                        <li><a asp-area="" asp-controller="PropertyTypes" asp-action="Index">Property Types</a></li>
+
                     }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
