--- a/MyLeasing.Web/Views/Owners/Details.cshtml
+++ b/MyLeasing.Web/Views/Owners/Details.cshtml
@@ -65,7 +65,7 @@ else
     <table class="table">
         <thead>
             <tr>
-               
+
                 <th>
                     @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Neighborhood)
                 </th>
@@ -81,35 +81,53 @@ else
                 <th>
                     @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().Rooms)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Properties.FirstOrDefault().IsAvailable)
+                </th>
+                <th>
+                    Imagenes
+                </th>
+                <th>
+                    Contracts
+                </th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model.Properties)
             {
-                <tr>
-                   
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Neighborhood)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Address)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Price)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.SquareMeters)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Rooms)
-                    </td>                   
-                    <td>
-                        <a asp-action="EditProperty" asp-route-id="@item.Id" class="btn btn-warning">Edit</a>
-                        <a asp-action="DetailsProperty" asp-route-id="@item.Id" class="btn btn-info">Details</a>
-                        <a asp-action="DeleteProperty" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
+            <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Neighborhood)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SquareMeters)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rooms)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsAvailable)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PropertyImages.Count)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Contracts.Count)
+                </td>
+                <td>
+                    <a asp-action="EditProperty" asp-route-id="@item.Id" class="btn btn-warning">Edit</a>
+                    <a asp-action="DetailsProperty" asp-route-id="@item.Id" class="btn btn-info">Details</a>
+                    <a asp-action="DeleteProperty" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
